chore(ads): Worked on continuing to implement the discovery and route-management parts.